@@ -1,8 +1,10 @@
-CHANGES.txt - 2007-12-04
+CHANGES.txt - 2007-12-07
 ------------------------
 
 CHANGES IN CUPS V1.4b1
 
+	- The Cancel-Job operation now supports a purge-job
+	  attriibute to purge a specified job.
 	- ppdEmit* and ppdCollect* now use the NonUIOrderDependency
 	  attributes for custom option selections.
 	- The web interface now enables/disables the printer
